--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1 style="text-align: center;font-size: 1.8rem;">Cash Register Manager </h1>
+    <h1 style="text-align: center;font-size: 1.7rem;">App for Cash Counter that tells change/amount to
+      be returned to customer on his/her bill</h1>
+    </h2>
     <div class="container">
-      <h2>Cash Register Manager</h2>
       <label for="bill-amount">Enter bill amount</label>
       <input type="number" id="bill-amount" />
 
